[tool.poetry]
name = "analysis-depth-values"
version = "0.1.0"
description = ""
authors = ["kmlll4 <develop@kmworks-lll4.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"
torch = "^2.2.1"
torchvision = "^0.17.1"
pycocotools = "^2.0.7"
imageio = "^2.34.0"
scikit-image = "^0.22.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
